syntax = "proto3";

package calculator;

option go_package = "./calculator/calculatorpb";

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int64 num = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message ComputeAverageRequest {
  int32 num = 1;
}

message ComputeAverageResponse {
  double result = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse);
}